fix dark mode on links

--- a/tools/premise/style.css
+++ b/tools/premise/style.css
@@ -70,6 +70,9 @@
                 color: #333;
             }
         }
+        a {
+                color: cyan;
+                }
 
 * {
         font-family: Comfortaa;
